force-app/main/default/objects/ECM_Service_Plan__c/ECM_Service_Plan__c.object-meta.xml
<CustomObject>
    <description>ECMv2 service plan configuration.</description>
    <label>ECM Service Plan</label>
    <nameField>
        <label>ECM Service Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ECM Service Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>