force-app/main/default/objects/ECM_Service_Plan__c/fields/Add_Main_Client__c.field-meta.xml
<CustomField>
    <fullName>Add_Main_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, a Service Plan Participant record is created for the main client linked to their Case Participation record.</inlineHelpText>
    <label>Add Main Client</label>
    <type>Checkbox</type>
</CustomField>