force-app/main/default/objects/ECM_Service_Plan__c/fields/Default_Indicator_Filter__c.field-meta.xml
<CustomField>
    <fullName>Default_Indicator_Filter__c</fullName>
    <description>Semi-colon delimited list of &lt;variable&gt;=&lt;value&gt; pairs. Variable names are: &apos;variableValue&apos;, &apos;outcomeIndicatorVariableTypeName&apos;, &apos;oivtCat1Name&apos;, &apos;oivtCat2Name&apos;, &apos;outcomeIndicatorTypeName&apos;, &apos;outcomeTypeName&apos;, &apos;outcomeStatus&apos;, and &apos;outcomeParentName&apos;</description>
    <inlineHelpText>Semi-colon delimited list of &lt;variable&gt;=&lt;value&gt; pairs. Variable names are: &apos;variableValue&apos;, &apos;outcomeIndicatorVariableTypeName&apos;, &apos;oivtCat1Name&apos;, &apos;oivtCat2Name&apos;, &apos;outcomeIndicatorTypeName&apos;, &apos;outcomeTypeName&apos;, &apos;outcomeStatus&apos;, and &apos;outcomeParentName&apos;</inlineHelpText>
    <label>Default Indicator Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>