force-app/main/default/objects/ECM_Service_Plan__c/fields/ECM_Configuration__c.field-meta.xml
<CustomField>
    <fullName>ECM_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ECM Service Plan Configuration</label>
    <referenceTo>ECM_Configuration__c</referenceTo>
    <relationshipLabel>ECM Service Plans using this Configuration</relationshipLabel>
    <relationshipName>ECM_Service_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>