force-app/main/default/objects/ECM_Service_Plan__c/fields/ECM_PDF_Configuration__c.field-meta.xml
<CustomField>
    <fullName>ECM_PDF_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The configuration used to render the output from the Service Plan for PDF rendering and printing.</inlineHelpText>
    <label>ECM PDF Configuration</label>
    <referenceTo>ECM_Configuration__c</referenceTo>
    <relationshipLabel>ECM Service Plans (ECM PDF Configuration)</relationshipLabel>
    <relationshipName>ECM_Service_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>