force-app/main/default/objects/ECM_Service_Plan__c/fields/OI_Type_Label__c.field-meta.xml
<CustomField>
    <fullName>OI_Type_Label__c</fullName>
    <defaultValue>&apos;Indicator&apos;</defaultValue>
    <description>The label to display for the &apos;Outcome Indicator Type&apos; column on an Indicator component</description>
    <inlineHelpText>The label to display for the &apos;Outcome Indicator Type&apos; column on an Indicator component</inlineHelpText>
    <label>OI Type Column Label</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>