force-app/main/default/objects/ECM_Service_Plan__c/fields/OIV_Name_Label__c.field-meta.xml
<CustomField>
    <fullName>OIV_Name_Label__c</fullName>
    <defaultValue>&apos;Variable&apos;</defaultValue>
    <description>The label to display for the &apos;Outcome Indicator Variable Name&apos; column on an Indicator component</description>
    <inlineHelpText>The label to display for the &apos;Outcome Indicator Variable Name&apos; column on an Indicator component</inlineHelpText>
    <label>OIV Name Column Label</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>