force-app/main/default/objects/ECM_Service_Plan__c/fields/OIV_Name_Order__c.field-meta.xml
<CustomField>
    <fullName>OIV_Name_Order__c</fullName>
    <defaultValue>8</defaultValue>
    <inlineHelpText>The order that this section appears in the filter criteria section.</inlineHelpText>
    <label>OIV Name Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>