force-app/main/default/objects/ECM_Service_Plan__c/fields/OIVT_Category_One_Label__c.field-meta.xml
<CustomField>
    <fullName>OIVT_Category_One_Label__c</fullName>
    <defaultValue>&apos;Category One&apos;</defaultValue>
    <description>The label to display for the &apos;Outcome Indicator Variable Type Category One&apos; column on an Indicator component</description>
    <inlineHelpText>The label to display for the &apos;Outcome Indicator Variable Type Category One&apos; column on an Indicator component</inlineHelpText>
    <label>OIVT Category One Column Label</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>