force-app/main/default/objects/ECM_Service_Plan__c/fields/OIVT_Category_One_Order__c.field-meta.xml
<CustomField>
    <fullName>OIVT_Category_One_Order__c</fullName>
    <defaultValue>2</defaultValue>
    <inlineHelpText>The order that this section appears in the filter criteria section.</inlineHelpText>
    <label>OIVT Category One Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>