force-app/main/default/objects/ECM_Service_Plan__c/fields/Outcome_Status_Label__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Status_Label__c</fullName>
    <defaultValue>&apos;Status&apos;</defaultValue>
    <description>The label to display for the &apos;Outcome Status&apos; column on an Indicator component</description>
    <inlineHelpText>The label to display for the &apos;Outcome Status&apos; column on an Indicator component</inlineHelpText>
    <label>Outcome Status Column Label</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>