force-app/main/default/objects/ECM_Service_Plan__c/fields/Outcome_Type_Order__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Type_Order__c</fullName>
    <defaultValue>6</defaultValue>
    <inlineHelpText>The order that this section appears in the filter criteria section.</inlineHelpText>
    <label>Outcome Type Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>