force-app/main/default/objects/ECM_Service_Plan__c/fields/Pagination_Page_Size__c.field-meta.xml
<CustomField>
    <fullName>Pagination_Page_Size__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of rows to display on a &apos;page&apos; when pagination is turned on for pagination enabled components. If value is zero, pagination will not be used.</description>
    <inlineHelpText>The number of rows to display on a &apos;page&apos; when pagination is turned on for pagination enabled components. If value is zero, pagination will not be used.</inlineHelpText>
    <label>Pagination Page Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>