force-app/main/default/objects/ECM_Service_Plan__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>ECM Service Plan</relationshipLabel>
    <relationshipName>ECM_Service_Plan</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>