force-app/main/default/objects/ECM_Service_Plan__c/fields/Record_Type_Label__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Label__c</fullName>
    <inlineHelpText>The Record Type Label (not the API name). Leave blank for default record type.</inlineHelpText>
    <label>Record Type Label</label>
    <length>40</length>
    <type>Text</type>
</CustomField>