force-app/main/default/objects/ECM_Service_Plan__c/fields/Show_OI_Type__c.field-meta.xml
<CustomField>
    <fullName>Show_OI_Type__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether to show the &apos;Outcome Indicator Type&apos; column on an Indicator component</description>
    <inlineHelpText>Whether to show the &apos;Outcome Indicator Type&apos; column on an Indicator component</inlineHelpText>
    <label>Show OI Type Column</label>
    <type>Checkbox</type>
</CustomField>