force-app/main/default/objects/ECM_Service_Plan__c/fields/Show_OIV_Cat1__c.field-meta.xml
<CustomField>
    <fullName>Show_OIV_Cat1__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether to show the &apos;Outcome Indicator Variable Category One&apos; column on an Indicator component</description>
    <inlineHelpText>Whether to show the &apos;Outcome Indicator Variable Category One&apos; column on an Indicator component</inlineHelpText>
    <label>Show OIV Category One Column</label>
    <type>Checkbox</type>
</CustomField>