force-app/main/default/objects/ECM_Service_Plan__c/fields/Show_Outcome_Status__c.field-meta.xml
<CustomField>
    <fullName>Show_Outcome_Status__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether to show the &apos;Outcome Status&apos; column on an Indicator component</description>
    <inlineHelpText>Whether to show the &apos;Outcome Status&apos; column on an Indicator component</inlineHelpText>
    <label>Show Outcome Status Column</label>
    <type>Checkbox</type>
</CustomField>