force-app/main/default/objects/ECM_Service_Plan__c/fields/Show_Targeted__c.field-meta.xml
<CustomField>
    <fullName>Show_Targeted__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether to show the &apos;Targeted&apos; column on an Indicator component</description>
    <inlineHelpText>Whether to show the &apos;Targeted&apos; column on an Indicator component</inlineHelpText>
    <label>Show Targeted Column</label>
    <type>Checkbox</type>
</CustomField>