force-app/main/default/objects/ECM_Service_Plan__c/fields/Targeted_Label__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Label__c</fullName>
    <defaultValue>&apos;Targeted&apos;</defaultValue>
    <description>The label to display for the &apos;Targeted&apos; column on an Indicator component</description>
    <inlineHelpText>The label to display for the &apos;Targeted&apos; column on an Indicator component</inlineHelpText>
    <label>Targeted Column Label</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>